# vk.py-1.0.0a6

./: LICENSE  MANIFEST  PKG-INFO  README.md  pyproject.toml  setup.py
vk/: constants.py
vk/bot_framework/: __init__.py
vk/bot_framework/dispatcher/: storage.py
vk/bot_framework/extensions/: kafka.py  rabbitmq.py
vk/bot_framework/rules/: rules.py
vk/bot_framework/storages/: redis.py
vk/exceptions/: __init__.py  errors_dispatcher.py
vk/keyboards/: __init__.py  keyboard.py
vk/methods/: __init__.py  api.py  messages.py
vk/types/: message.py
vk/utils/: auth_manager.py  mixins.py
