[tool.poetry]
name = "vk.py"
version = "1.0.0a6"
description = "Extremely-fast, easy-to-use, ready for production. The asyncio based library for Python and Humans written to be efficient and reliable."
authors = ["prostomarkeloff"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/prostomarkeloff/vk.py"
repository = "https://github.com/prostomarkeloff/vk.py"
keywords = ["vk-api", "asyncio", "vkbot", "vk", "vk-bot"]
classifiers = [
    "Framework :: AsyncIO",
    "Environment :: Web Environment",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages = [
    { include = "vk" },
]

[tool.poetry.dependencies]
python = "^3.6"
watchgod = "^0.5.0"
aiohttp = "^3.6"
pydantic = "*"
async-generator = {version = "^1.10", python = "3.6"}
contextvars = {version = "^2.4", python = "3.6"}
vbml = {version = "^0.5.0", optional = true}
[tool.poetry.dev-dependencies]
pytest = {version = "^5.2", allows-prereleases = true}
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pre-commit = {version = "^1.20", allows-prereleases = true}
reorder-python-imports = "^1.8"
mkdocs = "^1.0"
mkdocs-material = "^4.4"
pytest-asyncio = "^0.10.0"

[tool.black]
line-length = 79
target-version = ["py36", "py37"]

[tool.poetry.extras]
vbml = ["vbml"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
